Addressed the comments
Signed-off-by: Sagar Darji <darsaga@amazon.com>